[package]
name = "w5500"
version = "0.2.1"
authors = ["Michael Watzko <michael@watzko.de>", "Maarten Oosting <mail@maartenoosting.nl>"]
repository = "https://github.com/kellerkindt/w5500.git"
description = "W5500 IoT Controller implementation. Currently UDP sending and receiving is working. WIP"
keywords = ["embedded", "w5500", "iot", "arm", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std", "network-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = { version = "1.2.1", default-features = false }
embassy-traits = "0.1.0"
embedded-hal = "0.2.1"
futures = { version = "0.3.5", default-features = false }
